[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "agentforge"
version = "0.1.0"
description = "AgentForge: an autonomous, human-supervised AI software engineering agent."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [
    { name = "AgentForge Contributors" }
]
keywords = [
    "ai",
    "agent",
    "code-generation",
    "software-engineering",
    "llm",
    "developer-tools",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "typer>=0.12.3,<1.0.0",
    "rich>=13.7.1,<14.0.0",
    "httpx>=0.27.0,<1.0.0",
    "anyio>=4.4.0,<5.0.0",
    "tenacity>=8.3.0,<9.0.0",
    "jinja2>=3.1.4,<4.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "alembic>=1.13.1,<2.0.0",
    "numpy>=1.26.4,<2.0.0",
    "gitpython>=3.1.43,<4.0.0",
    "ruff>=0.5.0,<1.0.0",
    "black>=24.4.2,<25.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pytest>=8.2.0,<9.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
    "bandit>=1.7.9,<2.0.0",
    "structlog>=24.1.0,<25.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "tiktoken>=0.7.0,<1.0.0",
    "watchdog>=4.0.1,<5.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.30.1,<1.0.0",
    "sse-starlette>=2.1.0,<3.0.0",
]
gui = [
    "PySide6>=6.7.1,<7.0.0",
]
docker = [
    "docker>=7.1.0,<8.0.0",
]
dev = [
    "pytest-asyncio>=0.23.7,<1.0.0",
    "pytest-mock>=3.14.0,<4.0.0",
    "hypothesis>=6.103.1,<7.0.0",
    "types-requests>=2.32.0",
    "pre-commit>=3.7.1,<4.0.0",
]

[project.scripts]
agentforge = "agentforge.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge"]

[tool.hatch.build.targets.sdist]
include = [
    "src/agentforge",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "TCH", "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agentforge"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["agentforge"]

[[tool.mypy.overrides]]
module = [
    "tiktoken.*",
    "docker.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=agentforge --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that exercise multiple components together",
    "slow: tests that take a long time to run",
]

[tool.coverage.run]
source = ["src/agentforge"]
branch = true
omit = ["*/tests/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "def __repr__",
]
fail_under = 0